--- a/common/Makefile
+++ b/common/Makefile
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: (GPL-2.0)
-CC := gcc
+CC = g++
 
 all: common_params.o common_user_bpf_xdp.o common_libbpf.o
 
@@ -9,13 +9,13 @@ LIBBPF_DIR = ../libbpf/src/
 CFLAGS += -I$(LIBBPF_DIR)/build/usr/include/  -I../headers
 # TODO: Do we need to make libbpf from this make file too?
 
-common_params.o: common_params.c common_params.h
+common_params.o: common_params.cpp common_params.h
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-common_user_bpf_xdp.o: common_user_bpf_xdp.c common_user_bpf_xdp.h
+common_user_bpf_xdp.o: common_user_bpf_xdp.cpp common_user_bpf_xdp.h
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-common_libbpf.o: common_libbpf.c common_libbpf.h
+common_libbpf.o: common_libbpf.cpp common_libbpf.h
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 .PHONY: clean
